--- a/du3aa.html
+++ b/du3aa.html
@@ -10,7 +10,13 @@
 <body>
     <nav>
         <a href="index.html" class="logo">Islam Web</a>
-        <ul>
+        <span class="prog">
+            <span></span>
+            <span></span>
+            <span></span>
+        </span>
+        <ul class="links">
+            <span class="close">X</span>
             <li><a href="index.html">home</a></li>
             <li><a href="">about</a></li>
             <li><a href="du3aa.html" class="activ">du3aa</a></li>
