--- a/index.html
+++ b/index.html
@@ -9,13 +9,19 @@
 </head>
 <body>
     <nav>
-    <a href="index.html" class="logo">Islam Web</a>
-    <ul>
-        <li><a href="index.html" class="activ">home</a></li>
-        <li><a href="">about</a></li>
-        <li><a href="du3aa.html">du3aa</a></li>
-        <li><a href="quran.html">quran</a></li>
-    </ul>
+        <a href="index.html" class="logo">Islam Web</a>
+        <span class="prog">
+            <span></span>
+            <span></span>
+            <span></span>
+        </span>
+        <ul class="links">
+            <span class="close">X</span>
+            <li><a href="index.html" class="activ">home</a></li>
+            <li><a href="">about</a></li>
+            <li><a href="du3aa.html">du3aa</a></li>
+            <li><a href="quran.html">quran</a></li>
+        </ul>
     </nav>
 
     <section class="main-content">
@@ -28,7 +34,7 @@
         </a>
     </section>
 
-    <footer>
+    <footer style="position: fixed; bottom: 0;">
         <h3>Created By Jaffar &copy;</h3>
     </footer>
 
