--- a/quran.html
+++ b/quran.html
@@ -10,11 +10,17 @@
   <body>
     <nav>
       <a href="index.html" class="logo">Islam Web</a>
-      <ul>
-        <li><a href="index.html">home</a></li>
-        <li><a href="">about</a></li>
-        <li><a href="du3aa.html">du3aa</a></li>
-        <li><a href="quran.html" class="activ">quran</a></li>
+      <span class="prog">
+          <span></span>
+          <span></span>
+          <span></span>
+      </span>
+      <ul class="links">
+          <span class="close">X</span>
+          <li><a href="index.html">home</a></li>
+          <li><a href="">about</a></li>
+          <li><a href="du3aa.html">du3aa</a></li>
+          <li><a href="quran.html" class="activ">quran</a></li>
       </ul>
     </nav>
 
